--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,16 @@
   <aside class="span4">
     <section>
       <h3><%= @user.first_name %>, <%= @user.last_name %></h3>
-      <h3><%= @user.email %></h3>
+      <h3><%= @user.username %></h3>
+      <h3><%= @user.password %></h3>
+      <h3><%= @user.birthday %></h3>
+      <h3><%= @user.address %></h3>
+      <h3><%= @user.city %></h3>
+      <h3><%= @user.state_code %></h3>
+      <h3><%= @user.zip %></h3>
+      <h3><%= @user.neighborhood %></h3>
+      <h3><%= @user.phone %></h3>
+      <h3><%= @user.about %></h3>
     </section>
   </aside>
 </div>
