--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,7 +3,6 @@
 		<div class="col-md-12 col-md-offset-5">
 			<h1>Edit Profile</h1>
 
-
 			<%= form_for @user do |f| %>
 
 			<div class="row">
@@ -71,7 +70,7 @@
 			<div class="row">
 				<div class="span6 offset3">
 					<%= f.label "About Me" %>
-					<%= f.text_field :about %>
+					<%= f.text_area :about %>
 				</div>
 			</div>			
 			
