--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,17 @@
 	<div class="row">
 		<div class="col-md-12 col-md-offset-5">
 			<h1>Sign up</h1>
-
+			<div class="row">
+				<div class="span6 offset2">	
+					<% unless @user.errors.count == 0  %>
+					
+						<% @user.errors.full_messages.each do |msg| %>
+						<p><%= msg %></p>
+						<% end %>
+					</ul>
+					<% end %>
+				</div>
+			</div>
 
 			<%= form_for @user do |f| %>
 
@@ -17,18 +27,11 @@
 				</div>
 			</div>
 
-
 			<div class="row">
 				<div class="span6 offset3">
-					<%= f.text_field :email, placeholder: "email" %>
+					<%= f.text_field :email, placeholder: "Email" %>
 				</div>
-			</div>
-
-			<div class="row">
-				<div class="span6 offset3">
-					<%= f.text_field :username, placeholder: "username" %>
-				</div>
-			</div>			
+			</div>		
 			
 			<div class="row">
 				<div class="span6 offset3">
@@ -43,17 +46,6 @@
 			<div class="row">
 				<div class="span6 offset3">
 					<%= f.submit "Create", class: "btn btn-info" %>
-				</div>
-			</div>
-			<div class="row">
-				<div class="span6 offset3">	
-					<% unless @user.errors.count == 0  %>
-					<ul>
-						<% @user.errors.full_messages.each do |msg| %>
-						<li><%= msg %></li>
-						<% end %>
-					</ul>
-					<% end %>
 				</div>
 			</div>
 			<%end%>
