--- a/app/views/spots/result.html.erb
+++ b/app/views/spots/result.html.erb
@@ -28,6 +28,7 @@
 	<%= f.hidden_field :postal_code, value: @business["location"]["postal_code"] %>
 	<%= f.hidden_field :state_code, value: @business["location"]["state_code"] %>
 	<%= f.hidden_field :snippet_text, value: @business["snippet_text"] %>
+	<%= f.hidden_field :category, value: @category %>
 	<%= f.submit "Add Spot" %>
 <%end%>
 <%end%>
