--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,51 +1,23 @@
-<div class ="container">
-<div class="row">
-  <aside class="span4">
-    <section>
-      <h3><%= @user.first_name %>, <%= @user.last_name %></h3>
-      <h3><%= @user.password %></h3>
-      <h3><%= @user.birthday %></h3>
-      <h3><%= @user.address %></h3>
-      <h3><%= @user.city %></h3>
-      <h3><%= @user.state_code %></h3>
-      <h3><%= @user.zip %></h3>
-      <h3><%= @user.neighborhood %></h3>
-      <h3><%= @user.phone %></h3>
-      <h3><%= @user.about %></h3>
-    </section>
-  </aside>
-  <table border = "1">
-    <thead>
-        <th>Name</th>
-        <th>Rating</th>
-        <th>Image</th>
-        <th>Phone</th>
-        <th>Address</th>
-        <th>Cross Streets</th>
-        <th>City</th>
-        <th>Neighborhoods</th>
-        <th>Zip</th>
-        <th>State</th>
-        <th>Category</th>
-        <th>Remove Spot</th>
-    </thead>
-    <% @spots.each do |spot| %>
+<div class ="container results">
+  <h3 class = "profile_name"><%= @user.first_name %></h3>
+    <table class= "table profile_info">
       <tr>
-        <td><%= link_to spot.name, spot_path(spot.id) %></td>
-        <td><img src="<%= spot.rating_img_url %>"></td>
-        <td><img src="<%= spot.image_url %>"></td>
-        <td><%= spot.display_phone %></td>
-        <td><%= spot.display_address %></td>
-        <td><%= spot.cross_streets %></td>
-        <td><%= spot.city %></td>
-        <td><%= spot.neighborhoods %></td>
-        <td><%= spot.postal_code %></td>
-        <td><%= spot.state_code %></td>
-        <td><%= spot.category %></td>
-        
+        <td><label>City:</label></td>
+        <td><%= @user.city %></td>
       </tr>
-    <% end %>
-  </table>
+      <tr>    
+        <td><label>Neighborhood:</label></td>
+        <td><%= @user.neighborhood %></td>
+      </tr>
+      <tr>  
+        <td><label>About:</label></td>
+        <td><%= @user.about %></td>
+      </tr>
+    </table> 
 
-</div>
-<div>
+      
+        <h4 id = "my_spots">My Spots</h4>
+      
+      <%= render partial: "myspots" %>
+  </div>
+  <div>
