--- a/app/views/spots/result.html.erb
+++ b/app/views/spots/result.html.erb
@@ -1,34 +1,81 @@
 
-<%= @business["name"] %>
+<div class= "container spot_profile">
+	<%= @business["name"] %>
 
-<img src="<%= @business["image_url"] %>">
+	<table class = "table profile">
+		<tr>	
+			<td>
+				<img src="<%= @business["rating_img_url"] %>"><br>
+				<img src="<%= @business["image_url"] %>"></br>
+			</td>
 
-<img src="<%= @business["rating_img_url"] %>">
+			<td>
+			<table>
+				<tr>
+					<td><label>Category</label></td>
+					<td><%= @category %></td>
+				</tr>
+				<tr>
+					<td><label>Neighborhood: </label></td>
+					<td><%= @business["location"]["neighborhoods"].first %></td>
+				<tr>
+				<tr>
+					<td><label>Address: </label></td>	
+					<td><% @business["location"]["display_address"].each do |address_line| %>
+						<%= address_line %><br>
+					<%end%></td>
+				</tr>
+				<tr>
+					<td><label>Phone: </label></td>
+					<td><%= @business["display_phone"] %></td>
+				</tr>
+				<tr>
+					<td><label>Snippet:</label></td>
+					<td><%= @business["snippet_text"] %></td>
+			<table>
+			<td>
+		</tr>
+	</table>
 
-<%= @business["location"]["neighborhoods"].first %>
+</div>	
 
-<% @business["location"]["display_address"].each do |address_line| %>
-	<%= address_line %><br>
-<%end%>
 
-<%= @business["display_phone"] %>
-<%= @business["snippet_text"] %>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- Form to save spot to DB -->
 <% if signed_in? %>
-<%= form_for :spot,method: :post do |f| %>
-	<%= f.hidden_field :yelp_id, value: @business["name"] %>
-	<%= f.hidden_field :name, value: @business["name"] %>
-	<%= f.hidden_field :rating_img_url, value: @business["rating_img_url"] %>
-	<%= f.hidden_field :image_url, value: @business["image_url"] %>
-	<%= f.hidden_field :display_phone, value: @business["display_phone"] %>
-	<%= f.hidden_field :neighborhoods, value: @business["location"]["neighborhoods"][0] %>
-	<%= f.hidden_field :display_address, value: @business["location"]["display_address"] %>
-	<%= f.hidden_field :cross_streets, value: @business["location"]["cross_streets"] %>
-	<%= f.hidden_field :city, value: @business["location"]["city"] %>
-	<%= f.hidden_field :postal_code, value: @business["location"]["postal_code"] %>
-	<%= f.hidden_field :state_code, value: @business["location"]["state_code"] %>
-	<%= f.hidden_field :snippet_text, value: @business["snippet_text"] %>
-	<%= f.hidden_field :category, value: @category %>
-	<%= f.submit "Add Spot" %>
-<%end%>
+	<%= form_for :spot,method: :post do |f| %>
+		<%= f.hidden_field :yelp_id, value: @business["name"] %>
+		<%= f.hidden_field :name, value: @business["name"] %>
+		<%= f.hidden_field :rating_img_url, value: @business["rating_img_url"] %>
+		<%= f.hidden_field :image_url, value: @business["image_url"] %>
+		<%= f.hidden_field :display_phone, value: @business["display_phone"] %>
+		<%= f.hidden_field :neighborhoods, value: @business["location"]["neighborhoods"][0] %>
+		<%= f.hidden_field :address, value: @business["location"]["address"][0] %>
+		<%= f.hidden_field :cross_streets, value: @business["location"]["cross_streets"] %>
+		<%= f.hidden_field :city, value: @business["location"]["city"] %>
+		<%= f.hidden_field :postal_code, value: @business["location"]["postal_code"] %>
+		<%= f.hidden_field :state_code, value: @business["location"]["state_code"] %>
+		<%= f.hidden_field :snippet_text, value: @business["snippet_text"] %>
+		<%= f.hidden_field :category, value: @category %>
+		<%= f.submit "Add Spot" %>
+	<%end%>
 <%end%>
