--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -1,10 +1,20 @@
 // Place all the styles related to the site controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+ .container {
+	width: 700px;
+	margin: 0 auto;
+}
+
 #home_page {
 	text-align: center;
-	width: 600px;
-	margin: 0 auto;
+}
+
+.btn.btn-primary {
+	height: 25px;
+	padding-top: 0;
+	padding-bottom: 0 ;
 }
 
 .zip {
@@ -18,18 +28,4 @@
 
 h4#my_spots {
 	text-align: center;
-}
-
-div.container.results {
-	width: 600px;
-	margin: 0 auto;
-}
-
-h3.profile_name {
-	width: 600px;
-	margin: 0 auto;
-}
-table.table.profile_info {
-	width: 600px;
-	margin: 0 auto;
 }
