--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,7 +1,8 @@
 
 <div class ="container results">
 <h3> <%= params[:spots]["term"] %>, near <%= params[:spots]["zip"] %></h3>
-
+ <div id="search_by">
+ </div>
 <table class= "table table-hover listing">
 	<tbody>
 	<% @search_results["businesses"].each do |spot| %>
