--- a/app/views/spots/show.erb
+++ b/app/views/spots/show.erb
@@ -1,6 +1,6 @@
 
-<div class= "container spot_profile">
-    <%= @spot.name %>
+<div class= "container">
+    <h4><%= @spot.name%></h4>
 
 
     <table class = "table profile">
@@ -19,35 +19,35 @@
 
 
                     <tr>
-                        <td><label>Neighborhood: </label></td>
+                        <td><label>Neighborhood</label></td>
                         <td><%= @spot.neighborhoods %></td>
                     </tr>
                     <tr>
-                        <td><label>Address: </label></td>   
+                        <td><label>Address</label></td>   
                         <td><%= @spot.address %></br>
                             (btwn <%= @spot.cross_streets %>)</br>
                             <%= @spot.city %>, <%= @spot.state_code %>, <%= @spot.postal_code %></br>
                         </td>
                     </tr>
                     <tr>
-                        <td><label>Phone: </label></td>
+                        <td><label>Phone</label></td>
                         <td><%= @spot.display_phone %></td>
                     </tr>
                     <tr>
-                        <td><label>Snippet:</label></td>
+                        <td><label>Snippet</label></td>
                         <td><%= @spot.snippet_text %></td>
                     </tr>
                     <tr>
-                        <td><label>Personal Note:</label>
-                        <td>            <%= @spot.note %>
+                        <td><label>Personal Note</label>
+                        <td><%= @spot.note %>
             <% if @spot.note == nil %>
-            <button class="btn btn-primary" data-toggle="modal" data-target="    #myModal">
+            <a data-toggle="modal" data-target="    #myModal">
                 Add Note
-            </button>
+            </a>
             <%else%>
-            <button class="btn btn-primary" data-toggle="modal" data-target="    #myModal">
+            <a data-toggle="modal" data-target="    #myModal">
                 Edit Note
-            </button>
+            </a>
             <%end%></td>    
 
                 </table>
@@ -70,11 +70,11 @@
               </div>
                 <div class="modal-body">
                 <%= form_for @spot, method: :update do |spot| %>
-                <%= spot.text_area :note %>
+                <%= spot.text_area :note, class: "note_area" %>
                 </div>
 
                 <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default remove_spot" data-dismiss="modal">Close</button>
                 <%= spot.submit "Save", class: "btn btn-default"%>
                 <%end%>
                 </div>
