--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,3 +1,5 @@
+
+<body class = "home">
 <div id ="home_page">
 
 			<h1 id= "N2T">New 2 Town</h1>
@@ -12,3 +14,4 @@
 		</div>
 	</div>
 </div>
+</body>
