--- a/app/views/spots/result.html.erb
+++ b/app/views/spots/result.html.erb
@@ -1,6 +1,6 @@
 
 <div class= "container spot_profile">
-	<%= @business["name"] %>
+	<h4><%= @business["name"] %></h4>
 
 	<table class = "table profile">
 		<tr>	
@@ -38,7 +38,7 @@
 		</tr>
 	</table>
 
-</div>	
+
 
 
 
@@ -77,6 +77,7 @@
 		<%= f.hidden_field :state_code, value: @business["location"]["state_code"] %>
 		<%= f.hidden_field :snippet_text, value: @business["snippet_text"] %>
 		<%= f.hidden_field :category, value: @category %>
-		<%= f.submit "Add Spot" %>
+		<%= f.submit "Add Spot", class: "btn btn-primary" %>
 	<%end%>
 <%end%>
+</div>	
