--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <div class ="container">
-<nav class="navbar navbar-inverse" role="navigation">
+<nav class="navbar navbar-default my_nav" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -8,19 +8,19 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand ritly" href="/">N2T</a>
+    <a class="navbar-brand n2t" href="/">N2T</a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav navbar-right">
         <% if signed_in? %>
-            <li><%= link_to "#{current_user.first_name.capitalize}", current_user %></li>
-            <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
+            <li><%= link_to "#{current_user.first_name.capitalize}", current_user, class: "nav-link"%></li>
+            <li><%= link_to "Sign out", signout_path, method: "delete", class: "nav-link" %></li>
             <li>
         <% else %>
-                <li><%= link_to "Sign in", signin_path %></li>
-                <li><%= link_to "Sign up", signup_path %></li>
+                <li><%= link_to "Sign in", signin_path, class: "nav-link" %></li>
+                <li><%= link_to "Sign up", signup_path, class: "nav-link" %></li>
         <%end%>
     </ul>
   </div>
