--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= render 'layouts/header' %>
-<%= yield %>
+ <p class="notice"><%= notice %></p>
+ <p class="alert"><%= alert %></p>
+
+ 
+ <%= render 'layouts/header' %>
+ <%= yield %>
 
 </body>
 </html>
