--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,13 +14,13 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav navbar-right">
-        <% if signed_in? %>
-            <li><%= link_to "#{current_user.first_name.capitalize}", current_user, class: "nav-link"%></li>
-            <li><%= link_to "Sign out", signout_path, method: "delete", class: "nav-link" %></li>
+        <% if user_signed_in? %>
+            <li><%= link_to "#{current_user.first_name.capitalize}", current_user_path, class: "nav-link"%></li>
+            <li><%= link_to "Sign out", session_path, method: "delete", class: "nav-link" %></li>
             <li>
         <% else %>
-                <li><%= link_to "Sign in", signin_path, class: "nav-link" %></li>
-                <li><%= link_to "Sign up", signup_path, class: "nav-link" %></li>
+                <li><%= link_to "Sign in", new_user_session_path , class: "nav-link" %></li>
+                <li><%= link_to "Sign up", new_user_registration_path, class: "nav-link" %></li>
         <%end%>
     </ul>
   </div>
