--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,44 @@
-<h2>Sign up</h2>
+<div class ="container home_page">
+  <div class="row">
+    <div class="col-md-12 col-md-offset-5">
+      <h1>Sign up</h1>
+    </div>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+    <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+    <div class="row">
+      <div class="span6 offset3">
+        <%= f.label :name %> <br />
+        <%= f.text_field :name, :autofocus => true %>
+      </div>
+    </div>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+    <div class="row">
+      <div class="span6 offset3">
+        <%= f.label :email %><br />
+        <%= f.email_field :email%>
+      </div>
+    </div>    
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+    <div class="row">
+      <div class="span6 offset3">
+        <%= f.label :password %><br />
+        <%= f.password_field :password %>
+      </div>
+    </div>
 
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+    <div class="row">
+      <div class="span6 offset3">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="span6 offset3">
+        <%= f.submit "Sign up", class: "btn btn-info" %>
+      </div>
+    </div>
+    <%end%>
+  </div>
+</div>
