commented out a render, added another comment in a view

--- a/app/views/spots/show.erb
+++ b/app/views/spots/show.erb
@@ -6,6 +6,7 @@
   <table class = "table profile">
     <tr>    
       <td>
+        <!-- replace with image helpers -->
         <img src="<%= @spot.rating_img_url %>"><br>
         <img src="<%= @spot.image_url %>"></br>
       </td>
