added additional attributes to user signup

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
-<div class ="container home_page">
+<div id="home_page">
   <div class="row">
-    <div class="col-md-12 col-md-offset-5">
+    <div>
       <h1>Sign up</h1>
     </div>
 
@@ -34,6 +34,28 @@
         <%= f.password_field :password_confirmation %>
       </div>
     </div>
+
+    <div class="row">
+      <div class="span6 offset3">
+        <%= f.label :city %><br />
+        <%= f.text_field :city %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="span6 offset3">
+        <%= f.label :neighborhood %><br />
+        <%= f.text_field :neighborhood %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="span6 offset3">
+        <%= f.label :about, "About Me" %><br />
+        <%= f.text_area :about %>
+      </div>
+    </div>
+
     <div class="row">
       <div class="span6 offset3">
         <%= f.submit "Sign up", class: "btn btn-info" %>
